src/views/dolphinitemlistview.cpp
@@ -180,7 +180,8 @@ void DolphinItemListView::updateGridSize()
     // Calculate the item-width and item-height
     int itemWidth;
     int itemHeight;
-    QSize maxTextSize;
+    int maxTextLines = 0;
+    int maxTextWidth = 0;
 
     switch (itemLayout()) {
     case KFileItemListView::IconsLayout: {
@@ -200,16 +201,10 @@ void DolphinItemListView::updateGridSize()
         }
 
         itemHeight = padding * 3 + iconSize + option.fontMetrics.lineSpacing();
-        if (IconsModeSettings::maximumTextLines() > 0) {
-            // A restriction is given for the maximum number of textlines (0 means
-            // having no restriction)
-            const int additionalInfoCount = visibleRoles().count() - 1;
-            const int maxAdditionalLines = additionalInfoCount + IconsModeSettings::maximumTextLines();
-            maxTextSize.rheight() = option.fontMetrics.lineSpacing() * maxAdditionalLines;
-        }
 
         horizontalMargin = 4;
         verticalMargin = 8;
+        maxTextLines = IconsModeSettings::maximumTextLines();
         break;
     }
     case KFileItemListView::CompactLayout: {
@@ -220,8 +215,7 @@ void DolphinItemListView::updateGridSize()
         if (CompactModeSettings::maximumTextWidthIndex() > 0) {
             // A restriction is given for the maximum width of the text (0 means
             // having no restriction)
-            maxTextSize.rwidth() = option.fontMetrics.height() * 10 *
-                                   CompactModeSettings::maximumTextWidthIndex();
+            maxTextWidth = option.fontMetrics.height() * 10 * CompactModeSettings::maximumTextWidthIndex();
         }
 
         horizontalMargin = 8;
@@ -244,7 +238,8 @@ void DolphinItemListView::updateGridSize()
     option.horizontalMargin = horizontalMargin;
     option.verticalMargin = verticalMargin;
     option.iconSize = iconSize;
-    option.maxTextSize = maxTextSize;
+    option.maxTextLines = maxTextLines;
+    option.maxTextWidth = maxTextWidth;
     beginTransaction();
     setStyleOption(option);
     setItemSize(QSizeF(itemWidth, itemHeight));
